Fix layout collapse

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,14 +57,9 @@ h3.ui.header > .icon {
   margin-bottom: 0.7em;
 }
 
-.ui.list > .item > .icon {
-  display: inline-block !important;
-  vertical-align: baseline !important;
-  margin-right: 0.3rem !important;
-}
-
-.ui.labels {
-  display: inline-block;
+.ui.list > .item > .ui.label,
+.ui.list > .item > .ui.labels {
+  display: table-cell;
 }
 
 .CodeMirror {
